// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Touchable> renders 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#62e6ac",
          "height": 0,
          "opacity": 0,
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Touchable> when {children} 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <Text>
    Hello World
  </Text>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#62e6ac",
          "height": 0,
          "opacity": 0,
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Touchable> when {containerBorderRadius} 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        },
        Object {
          "borderRadius": 48,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#62e6ac",
          "height": 0,
          "opacity": 0,
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Touchable> when {rippleColor} 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Array [
      undefined,
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0,255,0,0.25)",
          "height": 0,
          "opacity": 0,
          "width": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`<Touchable> when {style} 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  pointerEvents="none"
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 0,
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#62e6ac",
          "height": 0,
          "opacity": 0,
          "width": 0,
        }
      }
    />
  </View>
</View>
`;
